--- a/metadata.yaml
+++ b/metadata.yaml
@@ -23,5 +23,7 @@ language: en
 publisher: Project Gutenberg
 rights: Public domain in the USA.
 rights_url: http://creativecommons.org/about/pdm
+subjects:
+- GITenberg
 title: Rivers of Great Britain. The Thames, from Source to Sea.
 url: http://www.gutenberg.org/ebooks/46818
